base/src/test/resources/failure/levels/too-many-levels.aya.txt
In file $FILE:2:17 ->

  1 | universe u
  2 | struct Lift (A : Prop u) : Prop (lsuc u)
                       ^--^
  3 |  | value : A

Error: The unqualified name referred to by `Prop` is not defined in the current scope
Resolving interrupted due to error(s).
What are you doing?
